--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
+html5ever = "0.26.0"
 scraper = "0.19.0"
 zip = "0.6.6"
