--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 html5ever = "0.26.0"
+indicatif = "0.17.8"
 nom = "7.1.3"
 scraper = "0.19.0"
 xmltree = "0.10.3"
